change doc-root to appropriate location

--- a/w88/files/default/w88info.com-nginx.conf
+++ b/w88/files/default/w88info.com-nginx.conf
@@ -7,7 +7,7 @@ server {
 	server_tokens   off;
 	more_set_headers 'Server: MagicBooBooLand';
 
-	root /var/www;
+	root /srv/http/wordpress;
 	index index.php index.html index.htm;
 
 	access_log /var/log/nginx/access.log;
