add monitoring hashes location

--- a/spiral/files/default/phpfpm-cache-clear.conf
+++ b/spiral/files/default/phpfpm-cache-clear.conf
@@ -21,4 +21,13 @@ server {
 		fastcgi_pass unix:/var/run/php5-fpm.sock;
 		fastcgi_index index.php;
 	}
+
+	location /dE8hoCJoyutI0roNOnsaE3UmsKdA9Cet {
+		stub_status on;
+		access_log off;
+		allow 192.168.11.0/24;
+		allow 52.74.204.170/32;
+		allow 127.0.0.1/32;
+		deny all;
+	}
 }
