--- a/prometheus/files/default/nginx-cors.conf
+++ b/prometheus/files/default/nginx-cors.conf
@@ -2,6 +2,7 @@ add_header 'Access-Control-Allow-Origin' '*';
 add_header 'Access-Control-Allow-Credentials' 'true';
 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT';
 add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
+add_header 'App-Origin' '*';
 
 if ($request_method = 'OPTIONS') {
 	add_header 'Access-Control-Allow-Origin' '*';
