--- a/w88/files/default/en-livezilla-nginx.conf
+++ b/w88/files/default/en-livezilla-nginx.conf
@@ -1,5 +1,5 @@
 server {
-        listen 80 default_server;
+        listen 80;
         server_name en-chat.99uuuat.com en-chat.99uu.com;
 	server_tokens   off;
 	more_set_headers 'Server: MagicBooBooLand';
